<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".manage.ManageFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/cal_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true">

            </FrameLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cal_container"
                android:layout_marginStart="5dp"
                android:text="@string/manage_greeting"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinManageFamily"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView6"/>

            <LinearLayout
                android:id="@+id/layout13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinManageFamily">

                <CheckBox
                    android:id="@+id/rbChestPainManage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/symptom_chestpain"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/rbCoughManage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/symptom_cough"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/rbDiarhheaManage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/symptom_diarrhea"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout13">

                <CheckBox
                    android:id="@+id/rbFatigueManage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/symptom_fatigue"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/rbFeverManage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/symptom_fever"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/rbHeadacheManage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/symptom_headache"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout14">

                <CheckBox
                    android:id="@+id/rbNoBreathManage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/symptom_nobreath"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/rbPainManage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/symptom_pain"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/rbSenseLossManage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/symptom_senseloss"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout15">

                <CheckBox
                    android:id="@+id/rbRedEyeManage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/symptom_redeye"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/rbSoreThroatManage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/symptom_sorethroat"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout16">

                <CheckBox
                    android:id="@+id/rbNoTalkManage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/symptom_notalk"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/rbRashManage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/symptom_rash"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout17"
                android:layout_marginTop="5dp"
                android:text="@string/manage_history_desc"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnTravelHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView7"
                android:layout_marginStart="5dp"
                android:backgroundTint="@color/crimson"
                android:text="@string/manage_history" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>