<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sqlite.RegisterFragment">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/register_title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtRegisterUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/textView8"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="16sp"
        android:hint="@string/login_username" />

    <EditText
        android:id="@+id/txtRegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/txtRegisterUsername"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        android:hint="@string/login_email"/>

    <EditText
        android:id="@+id/txtRegisterPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/txtRegisterEmail"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="phone"
        android:textSize="16sp"
        android:hint="@string/login_phone"/>

    <EditText
        android:id="@+id/txtRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/txtRegisterPhone"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:hint="@string/login_password"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtRegisterPassword"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/crimson"
        android:text="@string/register" />
</RelativeLayout>