<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.AccountAddress">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <EditText
        android:id="@+id/txtCurrentPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="15dp"

        android:ems="10"
        android:hint="@string/account_current_password"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txtNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtCurrentPassword"
        android:layout_marginTop="15dp"

        android:ems="10"
        android:hint="@string/account_new_password"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txtConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtNewPassword"
        android:layout_marginTop="15dp"

        android:ems="10"
        android:hint="@string/account_password_confirm"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnPasswordSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtConfirmPassword"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="5dp"
        android:backgroundTint="@color/crimson"
        android:text="@string/account_save" />

</RelativeLayout>