<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.AccountAddress">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <EditText
        android:id="@+id/txtEditUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="15dp"

        android:ems="10"
        android:hint="@string/declare_name"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txtEditEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtEditUsername"
        android:layout_marginTop="15dp"

        android:ems="10"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnUsernameEmailSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtEditEmail"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="5dp"
        android:backgroundTint="@color/crimson"
        android:text="@string/account_save" />

</RelativeLayout>